Closed Bug 1072348 Opened 10 years ago Closed 10 years ago

supplementary-plane ideographs are not handled correctly during justification

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(2 files)

The IsJustifiableCharacter() helper in nsTextFrame.cpp doesn't handle the (many thousands of) CJK ideograph characters in Plane 2 of Unicode, with the result that they're not treated as justifiable.

Testcase:
  data:text/html;charset=utf-8,<div lang="zh"
    style="font:16px monospace; width:200px; -moz-text-align-last:justify">
    你好<span style="color:red">&%23x210cf;&%23x219c3;</span>你好

Note how the two red (Plane 2) characters remain "stuck together" instead of being spread by justification.

(Other inconsistent spacing in this example is presumably due to bug 1063857, which is a separate issue.)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
https://hg.mozilla.org/mozilla-central/rev/570b7a08a2b7
https://hg.mozilla.org/mozilla-central/rev/4a1dd8939824
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: