Bug 1072348 - Make IsJustifiableCharacter recognize Plane 2 ideographs. r=roc